examples/test/testpolicy8157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8157
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key9: value40
      key7: value18
      key48: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value6
      podSelector:
        matchLabels:
          key22: value9
          key19: value7
